--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ logo:
 # # # # #
 
 # URL-stuff, don't forget the 'http...'-part
-url: "https://your.own.url.net"
+url: "https://skogsgren.github.io"
 #baseurl: ""
 permalink: /:year/:month/:day/:title.html
 
