--- a/_config.yml
+++ b/_config.yml
@@ -25,12 +25,12 @@ lang:
 
 # Default post and page image if it's those
 # are unspecified.
-image: /assets/images/kikofrieye.png
+image: /assets/images/20200706_0001_01.jpg
 
 # I just set this to whatever the above
 # image value is.
 # Could be some other image though.
-logo:
+logo: /assets/images/20200706_0001_01.jpg
 #
 # # # # #
 
