--- a/_config.yml
+++ b/_config.yml
@@ -49,9 +49,11 @@ nav:
 
  - name: "tags"
    href: "/tags"
+   
+<!--- name: "feed"
+   href: "/feed.xml"-->
 
- - name: "feed"
-   href: "/feed.xml"
+ 
 
  - name: "contact"
    href: "/contact"
