--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ author: "Gustaf Gren"
 
 # Would make sense to use the 'name:' above
 # here. This is an alternative title.
-title: "学生の哲学"
+title: "G a k u s e i"
 
 # 'en_US' is the default language. Enter a
 # new default language here. Making 'en_US'
